--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ᯓ 𝚂𝙾𝚞𝚁𝚂 𝙰𝙵𝚁𝙾𝚃𝙾𝙾 𝅘𝅥𝅯",
+    "name": "ᯓ S𝙾𝚞𝚁𝙲𝙴 V𝙴𝙽𝙾𝙼 𝅘𝅥𝅯",
     "description": "- لـ تشغيـل الاغانـي والفيديـو والبثـوث المباشـرة فـي المكالمـات الصوتيـه والمرئيـة عـلى تيليجــرام",
-    "logo": "https://telegra.ph/file/04b2f1f1c808dc49db35b.jpg",
+    "logo": "https://a.top4top.io/p_2929boy350.jpg",
     "keywords": [
     "python3",
     "telegram",
